fix hover scrollbar on mobile

--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -41,6 +41,6 @@ a:active {
   color: white;
 }
 .navigation-items a:hover,
-a:active {
+.navigation-items a:active {
   color: lightgray;
 }
